tests/eta-horror.m31.ref
Constant prod is declared.
Constant Pair is declared.
Constant Fst is declared.
Constant Snd is declared.
Constant Pair_beta_Fst is declared.
Constant Pair_beta_Snd is declared.
Constant Pair_eta is declared.
Constant C is declared.
Constant D is declared.
Constant p is declared.
Constant q is declared.
File "./eta-horror.m31", line 33, characters 15-18: Syntax error
  unknown identifier leta
